--- a/source/F10Y.L0001.L000/F10Y.L0001.L000.csproj
+++ b/source/F10Y.L0001.L000/F10Y.L0001.L000.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Main">
     <TargetFramework>netstandard2.1</TargetFramework>
-    <NoWarn>1573;1587;1591;IDE0130</NoWarn>
+    <NoWarn>CS1573;CS1587;CS1591;IDE0130</NoWarn>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup Label="Package">
@@ -12,6 +12,7 @@
     <Description>Default library for the F10Y.L0001 Functionairy-opinioned but generally applicable .NET Standard 2.1 foundation library.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/Functionairy/F10Y.L0060.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\F10Y.L0000\source\F10Y.L0000\F10Y.L0000.csproj" />
