--- a/source/F10Y.L0001.L004/F10Y.L0001.L004.csproj
+++ b/source/F10Y.L0001.L004/F10Y.L0001.L004.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Main">
     <TargetFramework>netstandard2.1</TargetFramework>
     <NoWarn>1573;1587;1591;IDE0130</NoWarn>
@@ -9,12 +9,14 @@
     <Authors>DCoats</Authors>
     <Company>Functionairy</Company>
     <Copyright>Copyright (c) Functionairy 2025</Copyright>
-    <Description>Types library for the F10Y.L0001 Functionairy-opinioned but generally applicable .NET Standard 2.1 foundation library.</Description>
+    <Description>Functionality that should be in L000, except that it depends on new (non-language) types.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/Functionairy/F10Y.L0001.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\F10Y.T0004\source\F10Y.T0004\F10Y.T0004.csproj" />
+    <ProjectReference Include="..\F10Y.L0001.L000\F10Y.L0001.L000.csproj" />
+    <ProjectReference Include="..\F10Y.L0001.T000\F10Y.L0001.T000.csproj" />
+    <ProjectReference Include="..\F10Y.L0001.Z000\F10Y.L0001.Z000.csproj" />
   </ItemGroup>
 </Project>
