--- a/source/F10Y.L0001.T001/F10Y.L0001.T001.csproj
+++ b/source/F10Y.L0001.T001/F10Y.L0001.T001.csproj
@@ -1,19 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Main">
     <TargetFramework>netstandard2.1</TargetFramework>
-    <NoWarn>CS1573;CS1587;CS1591;IDE0130</NoWarn>
+    <NoWarn>1573;1587;1591;IDE0130</NoWarn>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup Label="Package">
     <Version>1.0.0</Version>
     <Authors>DCoats</Authors>
     <Company>Functionairy</Company>
-    <Copyright>Copyright © Functionairy 2025</Copyright>
-    <Description>Values for the F10Y.L0001 Functionairy-opinioned netstandard2.1 foundation library.</Description>
+    <Copyright>Copyright (c) Functionairy 2025</Copyright>
+    <Description>IHasX/IWithX derived types for the types in T000.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <RepositoryUrl>https://github.com/Functionairy/F10Y.L0001.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\F10Y.T0003\source\F10Y.T0003\F10Y.T0003.csproj" />
+    <ProjectReference Include="..\..\..\F10Y.T0009\source\F10Y.T0009\F10Y.T0009.csproj" />
+    <ProjectReference Include="..\F10Y.L0001.T000\F10Y.L0001.T000.csproj" />
   </ItemGroup>
 </Project>
